@@ -5,6 +5,7 @@ Copyright (C) 2012 Bindle Binaries <syzdek@bindlebinaries.com>.
 0.3
       - Adding copyright information to BKNetTest. (syzdek)
       - Updating icon file names for examples. (syzdek)
+      - Adding BKPosixRegex class. (syzdek)
 
 0.2   2012-0317
       - Fixing BKCatalog example. (syzdek)
